Deploy fixed v7.1 Supabase PWA

--- a/index.html
+++ b/index.html
@@ -1842,9 +1842,6 @@ document.addEventListener('DOMContentLoaded', async () => {
   passEl.addEventListener("keydown", (ev) => {
     if (ev.key === "Enter") doLogin(false);
   });
-});
-
-        });
-    </script>
+});</script>
 </body>
 </html>
